--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JIΛmusic</title>
   </head>
 
-  <body>
+  <body class="min-h-screen bg-background font-sans antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
