--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>JIΛmusic</title>
   </head>
 
-  <body class="min-h-screen bg-background font-sans antialiased select-none">
-    <div id="root" class="relative flex flex-col w-full h-full"></div>
+  <body class="bg-background font-sans antialiased select-none">
+    <div id="root" class="relative flex flex-col w-full min-h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
